--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>644</width>
-    <height>503</height>
+    <width>592</width>
+    <height>363</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,7 +18,7 @@
     <property name="geometry">
      <rect>
       <x>110</x>
-      <y>30</y>
+      <y>20</y>
       <width>121</width>
       <height>28</height>
      </rect>
@@ -28,7 +28,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>34</y>
+      <y>24</y>
       <width>63</width>
       <height>20</height>
      </rect>
@@ -41,7 +41,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>74</y>
+      <y>64</y>
       <width>71</width>
       <height>20</height>
      </rect>
@@ -54,7 +54,7 @@
     <property name="geometry">
      <rect>
       <x>110</x>
-      <y>70</y>
+      <y>60</y>
       <width>121</width>
       <height>28</height>
      </rect>
@@ -64,7 +64,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>114</y>
+      <y>104</y>
       <width>71</width>
       <height>20</height>
      </rect>
@@ -77,10 +77,133 @@
     <property name="geometry">
      <rect>
       <x>110</x>
-      <y>110</y>
+      <y>100</y>
       <width>121</width>
       <height>28</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QGraphicsView" name="graphicsView">
+    <property name="geometry">
+     <rect>
+      <x>254</x>
+      <y>20</y>
+      <width>320</width>
+      <height>240</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pbUp">
+    <property name="geometry">
+     <rect>
+      <x>110</x>
+      <y>155</y>
+      <width>31</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="toolTip">
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Up&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset resource="imagenes/images.qrc">
+      <normaloff>:/new/imagenes/au.png</normaloff>:/new/imagenes/au.png</iconset>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pbRight">
+    <property name="geometry">
+     <rect>
+      <x>148</x>
+      <y>190</y>
+      <width>31</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="toolTip">
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Right&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset resource="imagenes/images.qrc">
+      <normaloff>:/new/imagenes/ar.png</normaloff>:/new/imagenes/ar.png</iconset>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pbZero">
+    <property name="geometry">
+     <rect>
+      <x>110</x>
+      <y>190</y>
+      <width>31</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="toolTip">
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Home&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset resource="imagenes/images.qrc">
+      <normaloff>:/new/imagenes/zero.png</normaloff>:/new/imagenes/zero.png</iconset>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pbLeft">
+    <property name="geometry">
+     <rect>
+      <x>71</x>
+      <y>190</y>
+      <width>31</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="toolTip">
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Left&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset resource="imagenes/images.qrc">
+      <normaloff>:/new/imagenes/al.png</normaloff>:/new/imagenes/al.png</iconset>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pbDown">
+    <property name="geometry">
+     <rect>
+      <x>110</x>
+      <y>224</y>
+      <width>31</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="toolTip">
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Down&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset resource="imagenes/images.qrc">
+      <normaloff>:/new/imagenes/ad.png</normaloff>:/new/imagenes/ad.png</iconset>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_4">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>140</y>
+      <width>71</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Servos :</string>
     </property>
    </widget>
   </widget>
@@ -89,7 +212,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>644</width>
+     <width>592</width>
      <height>25</height>
     </rect>
    </property>
@@ -103,6 +226,7 @@
    </attribute>
    <addaction name="actionConnect"/>
    <addaction name="actionSpray"/>
+   <addaction name="actioncolorIdentification"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <action name="actionConnect">
@@ -127,6 +251,18 @@
    </property>
    <property name="toolTip">
     <string>Spray</string>
+   </property>
+  </action>
+  <action name="actioncolorIdentification">
+   <property name="icon">
+    <iconset resource="imagenes/images.qrc">
+     <normaloff>:/new/imagenes/imageSegmentation.png</normaloff>:/new/imagenes/imageSegmentation.png</iconset>
+   </property>
+   <property name="text">
+    <string>colorIdentification</string>
+   </property>
+   <property name="toolTip">
+    <string>Color Identification</string>
    </property>
   </action>
  </widget>
