--- a/imagenes/images.qrc
+++ b/imagenes/images.qrc
@@ -14,5 +14,7 @@
         <file>NDVI.png</file>
         <file>vertColor.png</file>
         <file>clear.png</file>
+        <file>open.png</file>
+        <file>loadImage.png</file>
     </qresource>
 </RCC>
