--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -109,8 +109,8 @@
      <string/>
     </property>
     <property name="icon">
-     <iconset resource="imagenes/images.qrc">
-      <normaloff>:/new/imagenes/au.png</normaloff>:/new/imagenes/au.png</iconset>
+     <iconset resource="imagenes.qrc">
+      <normaloff>:/new/prefix1/imagenes/au.png</normaloff>:/new/prefix1/imagenes/au.png</iconset>
     </property>
    </widget>
    <widget class="QPushButton" name="pbRight">
@@ -129,8 +129,8 @@
      <string/>
     </property>
     <property name="icon">
-     <iconset resource="imagenes/images.qrc">
-      <normaloff>:/new/imagenes/ar.png</normaloff>:/new/imagenes/ar.png</iconset>
+     <iconset resource="imagenes.qrc">
+      <normaloff>:/new/prefix1/imagenes/ar.png</normaloff>:/new/prefix1/imagenes/ar.png</iconset>
     </property>
    </widget>
    <widget class="QPushButton" name="pbZero">
@@ -149,8 +149,8 @@
      <string/>
     </property>
     <property name="icon">
-     <iconset resource="imagenes/images.qrc">
-      <normaloff>:/new/imagenes/zero.png</normaloff>:/new/imagenes/zero.png</iconset>
+     <iconset resource="imagenes.qrc">
+      <normaloff>:/new/prefix1/imagenes/zero.png</normaloff>:/new/prefix1/imagenes/zero.png</iconset>
     </property>
    </widget>
    <widget class="QPushButton" name="pbLeft">
@@ -169,8 +169,8 @@
      <string/>
     </property>
     <property name="icon">
-     <iconset resource="imagenes/images.qrc">
-      <normaloff>:/new/imagenes/al.png</normaloff>:/new/imagenes/al.png</iconset>
+     <iconset resource="imagenes.qrc">
+      <normaloff>:/new/prefix1/imagenes/al.png</normaloff>:/new/prefix1/imagenes/al.png</iconset>
     </property>
    </widget>
    <widget class="QPushButton" name="pbDown">
@@ -189,8 +189,8 @@
      <string/>
     </property>
     <property name="icon">
-     <iconset resource="imagenes/images.qrc">
-      <normaloff>:/new/imagenes/ad.png</normaloff>:/new/imagenes/ad.png</iconset>
+     <iconset resource="imagenes.qrc">
+      <normaloff>:/new/prefix1/imagenes/ad.png</normaloff>:/new/prefix1/imagenes/ad.png</iconset>
     </property>
    </widget>
    <widget class="QLabel" name="label_4">
@@ -258,14 +258,15 @@
    <addaction name="actionSpray"/>
    <addaction name="actionVertical_histogram"/>
    <addaction name="actionHorizontal_histogram"/>
+   <addaction name="actionstrikeArea"/>
    <addaction name="actionNDVI_drawing"/>
    <addaction name="actionClear"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <action name="actionConnect">
    <property name="icon">
-    <iconset resource="imagenes/images.qrc">
-     <normaloff>:/new/imagenes/connect.png</normaloff>:/new/imagenes/connect.png</iconset>
+    <iconset resource="imagenes.qrc">
+     <normaloff>:/new/prefix1/imagenes/connect.png</normaloff>:/new/prefix1/imagenes/connect.png</iconset>
    </property>
    <property name="text">
     <string>Connect</string>
@@ -276,8 +277,8 @@
   </action>
   <action name="actionSpray">
    <property name="icon">
-    <iconset resource="imagenes/images.qrc">
-     <normaloff>:/new/imagenes/camera.png</normaloff>:/new/imagenes/camera.png</iconset>
+    <iconset resource="imagenes.qrc">
+     <normaloff>:/new/prefix1/imagenes/camera.png</normaloff>:/new/prefix1/imagenes/camera.png</iconset>
    </property>
    <property name="text">
     <string>Take photo</string>
@@ -288,8 +289,8 @@
   </action>
   <action name="actioncolorIdentification">
    <property name="icon">
-    <iconset resource="imagenes/images.qrc">
-     <normaloff>:/new/imagenes/imageSegmentation.png</normaloff>:/new/imagenes/imageSegmentation.png</iconset>
+    <iconset resource="imagenes.qrc">
+     <normaloff>:/new/prefix1/imagenes/imageSegmentation.png</normaloff>:/new/prefix1/imagenes/imageSegmentation.png</iconset>
    </property>
    <property name="text">
     <string>colorIdentification</string>
@@ -300,8 +301,8 @@
   </action>
   <action name="actionVertical_histogram">
    <property name="icon">
-    <iconset>
-     <normaloff>:/new/imagenes/vertColor</normaloff>:/new/imagenes/vertColor</iconset>
+    <iconset resource="imagenes.qrc">
+     <normaloff>:/new/prefix1/imagenes/vertColor.png</normaloff>:/new/prefix1/imagenes/vertColor.png</iconset>
    </property>
    <property name="text">
     <string>Vertical histogram</string>
@@ -312,8 +313,8 @@
   </action>
   <action name="actionHorizontal_histogram">
    <property name="icon">
-    <iconset>
-     <normaloff>:/new/imagenes/horizColor</normaloff>:/new/imagenes/horizColor</iconset>
+    <iconset resource="imagenes.qrc">
+     <normaloff>:/new/prefix1/imagenes/horizColor.png</normaloff>:/new/prefix1/imagenes/horizColor.png</iconset>
    </property>
    <property name="text">
     <string>Horizontal histogram</string>
@@ -324,8 +325,8 @@
   </action>
   <action name="actionNDVI_drawing">
    <property name="icon">
-    <iconset>
-     <normaloff>:/new/imagenes/NDVI</normaloff>:/new/imagenes/NDVI</iconset>
+    <iconset resource="imagenes.qrc">
+     <normaloff>:/new/prefix1/imagenes/NDVI.png</normaloff>:/new/prefix1/imagenes/NDVI.png</iconset>
    </property>
    <property name="text">
     <string>NDVI drawing</string>
@@ -336,8 +337,8 @@
   </action>
   <action name="actionClear">
    <property name="icon">
-    <iconset resource="imagenes/images.qrc">
-     <normaloff>:/new/imagenes/clear.png</normaloff>:/new/imagenes/clear.png</iconset>
+    <iconset resource="imagenes.qrc">
+     <normaloff>:/new/prefix1/imagenes/clear.png</normaloff>:/new/prefix1/imagenes/clear.png</iconset>
    </property>
    <property name="text">
     <string>Clear</string>
@@ -348,8 +349,8 @@
   </action>
   <action name="actionLoad_file">
    <property name="icon">
-    <iconset resource="imagenes/images.qrc">
-     <normaloff>:/new/imagenes/loadImage.png</normaloff>:/new/imagenes/loadImage.png</iconset>
+    <iconset resource="imagenes.qrc">
+     <normaloff>:/new/prefix1/imagenes/loadImage.png</normaloff>:/new/prefix1/imagenes/loadImage.png</iconset>
    </property>
    <property name="text">
     <string>Load file</string>
@@ -358,10 +359,22 @@
     <string>Load file</string>
    </property>
   </action>
+  <action name="actionstrikeArea">
+   <property name="icon">
+    <iconset resource="imagenes.qrc">
+     <normaloff>:/new/prefix1/imagenes/strikeArea.png</normaloff>:/new/prefix1/imagenes/strikeArea.png</iconset>
+   </property>
+   <property name="text">
+    <string>strikeArea</string>
+   </property>
+   <property name="toolTip">
+    <string>Show strike-area</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources>
-  <include location="imagenes/images.qrc"/>
+  <include location="imagenes.qrc"/>
  </resources>
  <connections/>
 </ui>
