--- a/imagenes.qrc
+++ b/imagenes.qrc
@@ -17,5 +17,6 @@
         <file>imagenes/clear.png</file>
         <file>imagenes/ad.png</file>
         <file>imagenes/camera.png</file>
+        <file>imagenes/arduCAM.jpeg</file>
     </qresource>
 </RCC>
